trunk/Archive2/5c/3bf31538888829/output
main.cpp: In function 'int main()':
main.cpp:46:5: error: static assertion failed: palindrom("testset") == false
     static_assert(__VA_ARGS__, #__VA_ARGS__)
     ^
main.cpp:49:5: note: in expansion of macro 'STATIC_ASSERT'
     STATIC_ASSERT(palindrom("testset") == false);
     ^
main.cpp:50:41: warning: statement is a reference, not call, to function 'constexpr_eval<true>' [-Waddress]
     constexpr_eval<palindrom("testset")>;
                                         ^
main.cpp:50:41: warning: statement has no effect [-Wunused-value]
